# 6502_emulator

./: CMakeLists.txt  README.md  test_6502
Docs/: todo.txt
src/: CPU.cpp  CPU.h  Memory.cpp  Memory.h  incl.h  main.cpp
tests/: test_lda.cpp  test_programs.cpp
